# RocketSim

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  RocketSim.vcxproj
assets/soccar_field/: README.md
libsrc/bullet3-2.82/: btBulletDynamicsCommon.h
libsrc/bullet3-2.82/BulletCollision/CollisionDispatch/: btCollisionDispatcher.cpp  btCollisionDispatcher.h  btCollisionObject.h  btCollisionWorld.cpp  btCollisionWorld.h  btCompoundCollisionAlgorithm.h  btCompoundCompoundCollisionAlgorithm.cpp  btCompoundCompoundCollisionAlgorithm.h  btDefaultCollisionConfiguration.cpp  btDefaultCollisionConfiguration.h  btManifoldResult.cpp
libsrc/bullet3-2.82/BulletMultiThreaded/: Win32ThreadSupport.cpp
libsrc/bullet3-2.82/BulletSoftBody/: btSoftBodyHelpers.cpp
libsrc/bullet3-2.82/LinearMath/: btScalar.h  btTransform.h  btVector3.h
libsrc/bullet3-3.24/: btBulletCollisionCommon.h  btBulletDynamicsCommon.h
libsrc/bullet3-3.24/LinearMath/: btAabbUtil2.h  btCpuFeatureUtility.h  btHashMap.h  btMatrix3x3.h  btMatrixX.h  btQuaternion.h  btQuickprof.cpp  btQuickprof.h  btScalar.h  btTransform.h  btTransformUtil.h  btVector3.h
python/: test.py
python/src/: PYB.h  PYB_Arena.cpp  PYB_Arena.h  PYB_Ball.cpp  PYB_Ball.h  PYB_BallHitInfo.cpp  PYB_BallHitInfo.h  PYB_BoostPad.cpp  PYB_BoostPad.h  PYB_Car.cpp  PYB_Car.h  PYB_DataStreamIn.cpp  PYB_DataStreamOut.cpp  PYB_Main.cpp  PYB_Math.cpp  PYB_Math.h  PYB_MathTypes.cpp  PYB_MathTypes.h  PYB_Misc.h  PYB_MutatorConfig.cpp  PYB_MutatorConfig.h  Wrappers.h
src/: BaseInc.h  BulletLink.cpp  BulletLink.h  Framework.h  RLConst.h  RocketSim.cpp  RocketSim.h
src/CarConfig/: CarConfig.h
src/CollisionMeshFile/: CollisionMeshFile.cpp  CollisionMeshFile.h
src/DataStream/: DataStreamIn.h  DataStreamOut.h  SerializeObject.h
src/Math/: Math.cpp  Math.h
src/Math/MathTypes/: MathTypes.cpp  MathTypes.h
src/RLLink/ExecutableMapper/: ExecutableMapper.cpp  ExecutableMapper.h  WinStructs.h
src/RLLink/MemoryUtil/: MemoryUtil.cpp  MemoryUtil.h
src/Sim/: CarControls.h  CollisionMasks.h  GameMode.h
src/Sim/Arena/: Arena.cpp  Arena.h
src/Sim/Ball/: Ball.cpp  Ball.h
src/Sim/BallHitInfo/: BallHitInfo.cpp  BallHitInfo.h
src/Sim/BallPredTracker/: BallPredTracker.cpp  BallPredTracker.h
src/Sim/BoostPad/: BoostPad.cpp  BoostPad.h
src/Sim/Car/: Car.cpp  Car.h
src/Sim/GameEventTracker/: GameEventTracker.cpp  GameEventTracker.h
src/Sim/MeshLoader/: MeshLoader.cpp  MeshLoader.h
src/Sim/MutatorConfig/: MutatorConfig.cpp  MutatorConfig.h
src/Sim/PhysState/: PhysState.cpp  PhysState.h
src/Sim/SuspensionCollisionGrid/: SuspensionCollisionGrid.cpp  SuspensionCollisionGrid.h
src/Sim/btVehicleRL/: btVehicleRL.cpp  btVehicleRL.h
(+298 files in other folders)
